[package]
name = "cool_emr_wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]
[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
lazy_static = "1.4.0"

[dependencies.web-sys]
version = "0.3"
features = [
    'Document',
    'Element',
    'HtmlElement',
    'Node',
    'Window',
    'DomRect',
    'CssStyleDeclaration'
]
